--- a/laravel-comics-2/public/css/app.css
+++ b/laravel-comics-2/public/css/app.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: "Fira Sans", sans-serif;
   font-size: 13px;
   color: black;
 }
@@ -17,7 +17,6 @@ html {
 }
 
 /* HEADER */
-
 .header-container {
   height: 8rem;
   justify-content: space-between;
@@ -42,11 +41,13 @@ ul {
   justify-content: flex-end;
   line-height: 7.7em;
 }
+
 li {
   margin-right: 25px;
   border-bottom: 4px solid transparent;
-  transition: all .5s;
+  transition: all 0.5s;
 }
+
 li:hover {
   border-bottom: 4px solid #0282f9;
 }
@@ -59,21 +60,21 @@ a {
   text-decoration: none;
   color: grey;
   font-weight: bold;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
-
-/*FOOTER */ 
-
+/*FOOTER */
 .footer-top {
   width: 100%;
   height: 27rem;
   background-image: url(../img/footer-bg.jpg);
   overflow: hidden;
 }
+
 .footer-top .footer-container-top {
   position: relative;
 }
+
 .footer-top .footer-container-top .footer-links-container {
   width: 45%;
   display: flex;
@@ -88,15 +89,18 @@ a {
   line-height: 1.7em;
   margin-right: 10px;
 }
+
 .dc-comics-links a {
   text-decoration: none;
   color: grey;
 }
+
 .title-links {
   color: white;
   font-size: 18px;
   font-weight: bold;
 }
+
 .dc-logo-background {
   width: 550px;
   position: absolute;
@@ -104,36 +108,42 @@ a {
   top: -100px;
   right: 0;
 }
+
 .footer-bottom {
   height: 6rem;
   background-color: #303030;
   position: relative;
   z-index: 10;
 }
+
 .footer-bottom .footer-container-bottom {
   height: 100%;
   display: flex;
   justify-content: space-between;
 }
+
 .footer-bottom .footer-container-bottom .btn-container {
   height: 100%;
   display: flex;
   align-items: center;
 }
+
 .footer-bottom .footer-container-bottom .btn-container button {
   background-color: transparent;
-  padding: .8em;
+  padding: 0.8em;
   color: white;
   font-weight: bold;
   font-size: 15px;
   border: none;
   border: 3px solid #0282f9;
   cursor: pointer;
-  transition: all .6s;
+  transition: all 0.6s;
 }
+
 .footer-bottom .footer-container-bottom .btn-container button:hover {
   background-color: #0282f9;
 }
+
 .follow-container {
   width: 35%;
   height: 100%;
@@ -141,31 +151,35 @@ a {
   align-items: center;
   justify-content: space-between;
 }
+
 .follow-container span {
   font-weight: bold;
   color: #0282f9;
   font-size: 18px;
 }
+
 .follow-container img {
   cursor: pointer;
 }
-
 
 /* MAIN */
 .section-main-top {
   width: 100%;
   height: 30rem;
 }
+
 .section-main-top img {
   height: 100%;
   width: 100%;
 }
+
 .section-main-bottom {
   width: 100%;
   height: 50rem;
   background-color: #1c1c1c;
   position: relative;
 }
+
 .container-box-series {
   display: flex;
   flex-wrap: wrap;
@@ -191,6 +205,7 @@ a {
   justify-content: center;
   margin-top: 30px;
 }
+
 .btn-load-more {
   width: 150px;
   padding: 1em;
@@ -200,13 +215,12 @@ a {
   font-weight: bold;
   box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.7);
   cursor: pointer;
-  transition: all .6s;
+  transition: all 0.6s;
 }
 
 .btn-load-more:hover {
   background-color: #59afff;
 }
-
 
 .single-box-series {
   flex-basis: calc(16.66% - 15px);
@@ -219,20 +233,17 @@ a {
 .series-img {
   width: 100%;
   height: 100%;
-  transition: all .6s;
+  transition: all 0.6s;
 }
 
 .series-img:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
+
 .series-title {
   color: white;
   margin-top: 10px;
 }
-
-
-
-
 
 nav {
   z-index: 20;
@@ -252,10 +263,12 @@ nav {
   align-items: center;
   cursor: pointer;
 }
+
 .nav-item img {
-    width: 40px;
-    margin-right: 15px
+  width: 40px;
+  margin-right: 15px;
 }
+
 .img-locator {
   width: 30px;
 }
