--- a/laravel-comics-2/public/css/app.css
+++ b/laravel-comics-2/public/css/app.css
@@ -272,3 +272,42 @@ nav {
 .img-locator {
   width: 30px;
 }
+
+/* COMIC BLADE PHP : */
+.container {
+  height: 100%;
+  position: relative;
+}
+
+.container-jumbotron {
+  height: 30rem;
+}
+.container-jumbotron img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+  height: 100%;
+  width: 100%;
+}
+
+.blue-line {
+  width: 100%;
+  background-color: #0282f9;
+  height: 4rem;
+}
+
+.single-img {
+  width: 12rem;
+  height: 18rem;
+  position: absolute;
+  bottom: 1rem;
+  left: 0;
+  border: 1px solid white;
+}
+.single-img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
