--- a/laravel-comics-2/resources/sass/app.scss
+++ b/laravel-comics-2/resources/sass/app.scss
@@ -1,313 +1,10 @@
 //
 @import 'partials/reset';
 @import 'partials/variables';
-  
-  html {
-    font-family: 'Fira Sans', sans-serif;
-    font-size: 13px;
-    color: black;
-  }
-  
-  .container {
-    max-width: 1100px;
-    margin: auto;
-    display: flex;
-  }
-  
+@import 'partials/footer';
+@import 'partials/header';
+@import 'partials/main';
+@import 'partials/singleComic';
 
-  /* HEADER */
-  
-  .header-container {
-    height: 8rem;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .container-header-left {
-    width: 20%;
-  }
-  
-  .container-header-left img {
-    width: 70px;
-  }
-  
-  .container-header-right {
-    width: 80%;
-  }
-  
-  ul {
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
-    line-height: 7.7em;
-  }
-  li {
-    margin-right: 25px;
-    border-bottom: 4px solid transparent;
-    transition: all .5s;
-  }
-  li:hover {
-    border-bottom: 4px solid #0282f9;
-  }
-  
-  a {
-    color: #0282f9;
-  }
-  
-  a {
-    text-decoration: none;
-    color: grey;
-    font-weight: bold;
-    transition: all .5s;
-  }
-  
-  
-
-  /*FOOTER */ 
-  
-  .footer-top {
-    width: 100%;
-    height: 27rem;
-    background-image: url(../img/footer-bg.jpg);
-    overflow: hidden;
-  }
-  .footer-top .footer-container-top {
-    position: relative;
-  }
-  .footer-top .footer-container-top .footer-links-container {
-    width: 45%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .dc-comics-links {
-    display: flex;
-    flex-direction: column;
-    margin-top: 30px;
-    line-height: 1.7em;
-    margin-right: 10px;
-  }
-  .dc-comics-links a {
-    text-decoration: none;
-    color: grey;
-  }
-  .title-links {
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-  }
-  .dc-logo-background {
-    width: 550px;
-    position: absolute;
-    overflow: hidden;
-    top: -100px;
-    right: 0;
-  }
-  .footer-bottom {
-    height: 6rem;
-    background-color: #303030;
-    position: relative;
-    z-index: 10;
-  }
-  .footer-bottom .footer-container-bottom {
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .footer-bottom .footer-container-bottom .btn-container {
-    height: 100%;
-    display: flex;
-    align-items: center;
-  }
-  .footer-bottom .footer-container-bottom .btn-container button {
-    background-color: transparent;
-    padding: .8em;
-    color: white;
-    font-weight: bold;
-    font-size: 15px;
-    border: none;
-    border: 3px solid #0282f9;
-    cursor: pointer;
-    transition: all .6s;
-  }
-  .footer-bottom .footer-container-bottom .btn-container button:hover {
-    background-color: #0282f9;
-  }
-  .follow-container {
-    width: 35%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .follow-container span {
-    font-weight: bold;
-    color: #0282f9;
-    font-size: 18px;
-  }
-  .follow-container img {
-    cursor: pointer;
-  }
-  
-  
-
-  /* MAIN */
-  .section-main-top {
-    width: 100%;
-    height: 30rem;
-  }
-  .section-main-top img {
-    height: 100%;
-    width: 100%;
-  }
-  .section-main-bottom {
-    width: 100%;
-    height: 50rem;
-    background-color: #1c1c1c;
-    position: relative;
-  }
-  .container-box-series {
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 70px;
-  }
-  
-  .label-current-series {
-    width: 180px;
-    padding: 1em;
-    text-align: center;
-    color: white;
-    background-color: #0282f9;
-    font-weight: bold;
-    font-size: 15px;
-    position: absolute;
-    top: -20px;
-    left: 200px;
-    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.7);
-  }
-  
-  .container-btn-load {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-  }
-  .btn-load-more {
-    width: 150px;
-    padding: 1em;
-    text-align: center;
-    color: white;
-    background-color: #0282f9;
-    font-weight: bold;
-    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.7);
-    cursor: pointer;
-    transition: all .6s;
-  }
-  
-  .btn-load-more:hover {
-    background-color: #59afff;
-  }
-  
-  
-  .single-box-series {
-    flex-basis: calc(16.66% - 15px);
-    margin-left: 15px;
-    margin-bottom: 55px;
-    height: 190px;
-    cursor: pointer;
-  }
-  
-  .series-img {
-    width: 100%;
-    height: 100%;
-    transition: all .6s;
-  }
-  
-  .series-img:hover {
-      transform: scale(1.1);
-  }
-  .series-title {
-    color: white;
-    margin-top: 10px;
-  }
-  
-  nav {
-    z-index: 20;
-    background-color: #0282f9;
-    color: white;
-    font-size: 12px;
-  }
-  
-  .nav-container {
-    justify-content: space-around;
-    align-items: center;
-    height: 9rem;
-  }
-  
-  .nav-item {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
-  .nav-item img {
-      width: 40px;
-      margin-right: 15px
-  }
-  .img-locator {
-    width: 30px;
-  }
-
-
-
-  /* COMIC BLADE PHP : */
-.container {
-  height: 100%;
-  position: relative;
-}
-.container-jumbotron {
-  height: 30rem;
-  img {
-     object-fit: cover;
-     object-position: top;
-     height: 100%;
-     width: 100%;
-  }
-}
-.blue-line {
-  width: 100%;
-  background-color: #0282f9;
-  height: 4rem;
-}
-
-.single-img {
-  width: 12rem;
-  height: 18rem;
-  position: absolute;
-  bottom: 1rem;
-  left: 0;
-  border: 1px solid white;
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-    }
-}
-
-.container-description {
-    background-color: #fff;
-    padding: 4rem 0;
- 
-    .container {
-       display: flex;
-       justify-content: flex-start;
- 
-       a.back {
-          display: block;
-          font-weight: 700;
-          color: $primary-color;
-          margin-bottom: 1rem;
-       }
-}
-}
 
 
