--- a/laravel-comics-2/public/css/app.css
+++ b/laravel-comics-2/public/css/app.css
@@ -16,53 +16,6 @@ html {
   display: flex;
 }
 
-/* HEADER */
-.header-container {
-  height: 8rem;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.container-header-left {
-  width: 20%;
-}
-
-.container-header-left img {
-  width: 70px;
-}
-
-.container-header-right {
-  width: 80%;
-}
-
-ul {
-  list-style: none;
-  display: flex;
-  justify-content: flex-end;
-  line-height: 7.7em;
-}
-
-li {
-  margin-right: 25px;
-  border-bottom: 4px solid transparent;
-  transition: all 0.5s;
-}
-
-li:hover {
-  border-bottom: 4px solid #0282f9;
-}
-
-a {
-  color: #0282f9;
-}
-
-a {
-  text-decoration: none;
-  color: grey;
-  font-weight: bold;
-  transition: all 0.5s;
-}
-
 /*FOOTER */
 .footer-top {
   width: 100%;
@@ -92,7 +45,7 @@ a {
 
 .dc-comics-links a {
   text-decoration: none;
-  color: grey;
+  color: rgb(160, 160, 160);
 }
 
 .title-links {
@@ -162,7 +115,53 @@ a {
   cursor: pointer;
 }
 
-/* MAIN */
+/* HEADER */
+.header-container {
+  height: 8rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container-header-left {
+  width: 20%;
+}
+
+.container-header-left img {
+  width: 70px;
+}
+
+.container-header-right {
+  width: 80%;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  line-height: 7.7em;
+}
+
+li {
+  margin-right: 25px;
+  border-bottom: 4px solid transparent;
+  transition: all 0.5s;
+}
+
+li:hover {
+  border-bottom: 4px solid #0282f9;
+}
+
+a {
+  color: #0282f9;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(95, 95, 95);
+  font-weight: bold;
+  transition: all 0.5s;
+}
+
 .section-main-top {
   width: 100%;
   height: 30rem;
@@ -294,7 +293,7 @@ nav {
 .blue-line {
   width: 100%;
   background-color: #0282f9;
-  height: 4.5rem;
+  height: 4rem;
 }
 
 .single-img {
@@ -310,4 +309,19 @@ nav {
      object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.container-description {
+  background-color: #fff;
+  padding: 4rem 0;
+}
+.container-description .container {
+  display: flex;
+  justify-content: flex-start;
+}
+.container-description .container a.back {
+  display: block;
+  font-weight: 700;
+  color: blue;
+  margin-bottom: 1rem;
 }
