--- a/laravel-comics-2/resources/sass/partials/_reset.scss
+++ b/laravel-comics-2/resources/sass/partials/_reset.scss
@@ -3,3 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 13px;
+    color: black;
+}
+  
+.container {
+    max-width: 1100px;
+    margin: auto;
+    display: flex;
+}
