--- a/laravel-comics-2/resources/sass/partials/_header.scss
+++ b/laravel-comics-2/resources/sass/partials/_header.scss
@@ -43,3 +43,10 @@
     font-weight: bold;
     transition: all .5s;
   }
+
+.active {
+  color: $activeColor;
+}
+.activeLi {
+  border-bottom: 4px solid $activeColor;
+}
