--- a/laravel-comics-2/public/css/app.css
+++ b/laravel-comics-2/public/css/app.css
@@ -162,6 +162,14 @@ a {
   transition: all 0.5s;
 }
 
+.active {
+  color: #0282f9;
+}
+
+.activeLi {
+  border-bottom: 4px solid #0282f9;
+}
+
 .section-main-top {
   width: 100%;
   height: 30rem;
@@ -274,7 +282,6 @@ nav {
 
 /* COMIC BLADE PHP : */
 .container {
-  height: 100%;
   position: relative;
 }
 
