--- a/laravel-comics-2/resources/sass/partials/_reset.scss
+++ b/laravel-comics-2/resources/sass/partials/_reset.scss
@@ -10,7 +10,7 @@ html {
     color: black;
 }
   
-.container {
+.central-container {
     max-width: 1100px;
     margin: auto;
     display: flex;
